--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   ],
   "author": "afraj rahman",
   "license": "ISC",
-
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
-  
   "devDependencies": {
-    "nodemon": "^3.1.1"    
+    "nodemon": "^3.1.1"
   }
 }
